# windows-dfir-ecosystem

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml
collector/windows/: Invoke-DFIREvidenceCollector.ps1
docs/: 00-overview.md  architecture.md  velociraptor.md
reporter/: __init__.py  parsers.py  report_builder.py  timeline.py
reporter/templates/: report.html.j2
sample_case/CASE-DEMO-HOST01/00_case/: summary.json
sample_case/CASE-DEMO-HOST01/03_persistence/: run_keys.csv  scheduled_tasks.csv
sample_case/CASE-DEMO-HOST01/04_execution/: services.csv
sample_case/CASE-DEMO-HOST01/05_network/: tcp_listeners.csv
sample_case/CASE-DEMO-HOST01/07_security/: defender_status.json  defender_threats.json
sample_case/CASE-DEMO-HOST01/09_findings/: findings.json
sample_case/CASE-DEMO-HOST01/11_reports/: executive_summary.md  report.html
sample_case/CASE-DEMO-HOST01/99_share_with_chatgpt/: summary.json
sample_case/CASE-DEMO-HOST01/99_share_with_internal_or_controlled_ai/: findings.json  summary.json  timeline.csv  timeline.json
tests/: test_parsers.py
velociraptor/: README.md
velociraptor/artifacts/: Custom.Windows.DFIR.EvidenceCollector.yaml
