[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-dfir-evidence-ecosystem"
version = "0.1.0"
description = "Windows-first DFIR triage collection and reporting toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1.4",
  "pandas>=2.2.2",
  "playwright>=1.52.0",
  "python-dateutil>=2.9.0",
]

[tool.setuptools.packages.find]
include = ["reporter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
